# HighTorque_Control

./: .gitignore  LICENSE  Makefile  README.md  README_es.md  README_zh.md  quick_start.sh
arduino/: .gitkeep
cpp/: .gitkeep  Makefile  README.md  angle_stream_control.cpp  can_motor_scanner.cpp  velocity_acceleration_control.cpp
python/: README.md  angle_stream_control.py  can_motor_scanner.py  requirements.txt  velocity_acceleration_control.py
rust/: .gitkeep  Cargo.toml  Makefile  README.md
rust/src/: lib.rs
scripts/: .gitkeep  setup.sh
