[package]
name = "livelybot-motor-control"
version = "0.1.0"
edition = "2021"
authors = ["LivelyBot Team"]
description = "High-performance motor control library for LivelyBot High Torque Motors"
license = "MIT"
repository = "https://github.com/HighTorque-Robotics/livelybot_hardware_sdk"

[[bin]]
name = "can_motor_scanner"
path = "src/bin/can_motor_scanner.rs"

[[bin]]
name = "velocity_acceleration_control"
path = "src/bin/velocity_acceleration_control.rs"

[[bin]]
name = "angle_stream_control"
path = "src/bin/angle_stream_control.rs"

[dependencies]
socketcan = "3.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
ctrlc = "3.0"
crossterm = "0.27"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"